tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__QuintupleCompres-AAAAAAAAAAAAAAAAAAALAA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2816,
  "prerequisites": [
    2625,
    2815
  ],
  "properties": {
    "auto_claim": false,
    "desc": "32,768 Solars! Puts out 100,000-131,072 EU/t.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Quintuple Compressed Solar",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    2625,
    2815
  ],
  "rewards": [],
  "tasks": []
}
