tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__RadioisotopeTher-AAAAAAAAAAAAAAAAAAAK8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2802,
  "prerequisites": [
    2801,
    2761,
    1707
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Runs for a reaaaally long time. Outputs an amount based on the fuel pellet given.\n\n241Am: 16 EU, 69875 days\n90Sr: 30 EU, 62640 days\n238Pu: 64 EU, 42982 days\n210Po: 480 EU, 34560 days\n\nHonestly, it's super not worth it. Especially considering you need to make a Cyclotron to make the fuel. And it's not even guaranteed!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Radioisotope Thermoelectric Generator",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2801,
    2761,
    1707
  ],
  "rewards": [],
  "tasks": []
}
