tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__SextupleCompress-AAAAAAAAAAAAAAAAAAALAQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2817,
  "prerequisites": [
    2816,
    2626
  ],
  "properties": {
    "auto_claim": false,
    "desc": "262,144 Solars! Puts out 1,000,000-2,097,152 EU/t.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sextuple Compressed Solar",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "UNLOCKED"
  },
  "required_prerequisites": [
    2816,
    2626
  ],
  "rewards": [],
  "tasks": []
}
