tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__SolidOxideFuelCe-AAAAAAAAAAAAAAAAAAALCg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2826,
  "prerequisites": [
    860,
    1245
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's the same as the previous, but more/better. It takes less time to heat up, but it chews through fuel pretty fast too. It still isn't as good as an LGT for power produced over time, but it can produce power faster. As long as you use it with the HP Steam Turbine.\n\nIt can produce 1A+ of LuV if you set it up right.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Solid-Oxide Fuel Cell Mk II",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860,
    1245
  ],
  "rewards": [],
  "tasks": []
}
